--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -22,7 +22,7 @@ li{
 
 header{
     text-align: center;
-    background-color: rgba(11, 11, 138, 0.998);
+    background-color: #474B50;
     color: white;
     padding-bottom: 30px;
 }
@@ -69,7 +69,7 @@ main{
 }
 
 .texto-secundario-protofolio h1{
-    background-image: linear-gradient(to right,rgb(13, 13, 117), rgba(7, 7, 237, 0.831));
+    background-image: linear-gradient(to right,#252B33, #5B687A);
     font-size: 2.5em;
     color: white;
     font-weight: bold;
@@ -78,7 +78,7 @@ main{
 .texto-secundario-protofolio h2{
     margin-top: 20px;
     font-size: 2em;
-    color: rgba(11, 11, 138, 0.998);
+    color: #3E5049;
     font-weight: bold;
 }
 
@@ -87,7 +87,7 @@ article.modulo-1 h3,h4,h5,p{
 }
 
 article.modulo-1 h3{
-    color: blue;
+    color: darkslategray;
     font-size: 1.7em;
 }
 
@@ -100,7 +100,7 @@ article.modulo-1 h5{
 }
 
 article.modulo-1 h4,h5{
-    color: rgb(7, 61, 239);
+    color: #4B7A67;
     font-weight: bold;
 }
 
@@ -111,8 +111,8 @@ article.modulo-1 img{
     width: 30%;
 }
 
-pre code{
-    font-size: 1.3em;
+code{
+    font-size: 1.2em;
     font-weight: bold;
 }
 
@@ -125,23 +125,23 @@ dl,dt,dd{
 
 article audio{
     padding-top: 20px;
-    color: blue;
+    color: #4B7A67;
 }
 
 article.modulo-1 video{
     position: absolute;
     padding: 10px;
     top: 20%;    
-    left: 20%;
-    width: 50%;
+    left: 10%;
+    width: 80%;
     height: 60%;
 }
 
 div.vidcontainer{
-    background-color: rgb(7, 61, 239);
+    background-color: #4B7A67;
     position: relative;
     margin: 20px -10px 15px 25%;
-    padding-bottom: 30%;
+    padding-bottom: 50%;
     width: 60%; 
 }
 
@@ -160,31 +160,31 @@ section.modulo-2{
 }
 
 section.modulo-2 h3{
-    color: blue;
+    color: darkslategray;
     padding-bottom: 30px;
     font-size: 1.7em;
 }
 
 section.modulo-2 h4{
-    color: rgb(7, 61, 239);
+    color: #4B7A67;
     font-size: 1.5em;
 }
 
 section.modulo-3 h3{
-    color: blue;
+    color: darkslategray;
     padding-bottom: 30px;
     font-size: 1.7em;
 }
 
 section.modulo-3 h4{
-    color: rgb(7, 61, 239);
+    color: #4B7A67;
     font-size: 1.5em;
 }
 
 caption{
     font-size: 1.5em;
     padding: 20px;
-    color:rgb(7, 61, 239);
+    color:darkslategray;
     font-weight: bolder;
 }
 
@@ -212,7 +212,7 @@ tr:nth-child(even){
 
 footer{
     margin-top: 10px;
-    background-color: blue;
+    background-color: #474B50;
     padding: 3px;
     text-align: center;
     color: white;
